SDK-50 Completed first full run of the ebx github org to match MERGE and REVIEW counts. First potential fix of the CSV formatting to fix the first issue spotted. Also continued to refactor as we see the classes emerge.